# Bankai

./: README.md  wireshark.c
CLI/: Cargo.toml  airpcap.rs  decrypt.c  generated_email.txt
CLI/src/: decrypt.rs  dllHighjacking.rs  dll_hijacking_c.rs  dllhijacking.rs  keylogger.rs  main.rs  overflow.rs  phishing.rs  port_scanner.rs  reverseShell.rs  reverseShellCon.rs  reverse_shell.rs  rootkit.c  rootkit.rs
Server/: received_keylog.txt  server.py
VulnerableApp/: vulnerable.py
VulnerableCode/: VulnServerRevOver.py  VulnerableConnectReverse.rs  VulnerableServerOverflow.py  dllhijacking.rs
